Add textarea element

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <img class='img' src="http://image.wdanna.com/avatar/cover.jpg" alt="A car on the road">
     </a>
     <input class='focusable-ele' type="text">
+    <textarea name="" id="" cols="30" rows="10"></textarea>
 </div>
 
 </body>
