Use focus-visible remove outline

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Remove ouline</title>
     <link rel="stylesheet" href="./index.css">
+    <script src="/node_modules/focus-visible/dist/focus-visible.min.js"></script>
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Element.prototype.classList"></script>
 </head>
 <body>
 <div class='container'>
@@ -12,8 +14,7 @@
         <img class='img' src="http://image.wdanna.com/avatar/cover.jpg" alt="A car on the road">
     </a>
     <input class='focusable-ele' type="text">
-    <textarea name="" id="" cols="30" rows="10"></textarea>
+    <textarea class='focusable-ele' name="" id="" cols="30" rows="10"></textarea>
 </div>
-
 </body>
 </html>
