--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="./index.css">
     <!--<script src="/node_modules/focus-visible/dist/focus-visible.min.js"></script>-->
     <!--<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Element.prototype.classList"></script>-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/what-input/5.1.2/what-input.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/what-input/5.1.2/what-input.js"></script>-->
+    <script src="https://cdn.rawgit.com/ambassify/smart-outline/master/main.js"></script>
+    <script src=index.js></script>
 </head>
 <body>
 <div class='container'>
