Use unpkg focus-visible package remove outline

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <title>Remove ouline</title>
     <link rel="stylesheet" href="./index.css">
-    <!--<script src="/node_modules/focus-visible/dist/focus-visible.min.js"></script>-->
-    <!--<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Element.prototype.classList"></script>-->
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/what-input/5.1.2/what-input.js"></script>-->
+    <script src="https://unpkg.com/focus-visible"></script>
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Element.prototype.classList"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/what-input/5.1.2/what-input.js"></script>
     <script src="https://cdn.rawgit.com/ambassify/smart-outline/master/main.js"></script>
-    <script src=index.js></script>
+    <!--<script src=index.js></script>-->
 </head>
 <body>
 <div class='container'>
     <button class='focusable-ele'>This is button</button>
     <a href="#">
-        <img class='img' src="http://image.wdanna.com/avatar/cover.jpg" alt="A car on the road">
+        <img src="http://image.wdanna.com/avatar/cover.jpg" alt="A car on the road">
     </a>
     <input class='focusable-ele' type="text">
     <textarea class='focusable-ele' name="" id="" cols="30" rows="10"></textarea>
