Firefox not work use what input

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </a>
     <input class='focusable-ele' type="text">
     <textarea class='focusable-ele' name="" id="" cols="30" rows="10"></textarea>
+    <div tabindex='0' role="button">This is a button with tabindex</div>
 </div>
 </body>
 </html>
