--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <title>Remove ouline</title>
     <link rel="stylesheet" href="./index.css">
-    <script src="https://unpkg.com/focus-visible"></script>
-    <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Element.prototype.classList"></script>
+    <!--<script src="https://unpkg.com/focus-visible"></script>-->
+    <!--<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Element.prototype.classList"></script>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/what-input/5.1.2/what-input.js"></script>
-    <script src="https://cdn.rawgit.com/ambassify/smart-outline/master/main.js"></script>
+    <!--<script src="https://cdn.rawgit.com/ambassify/smart-outline/master/main.js"></script>-->
     <!--<script src=index.js></script>-->
 </head>
 <body>
