Fix firefox outline issue

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class='container'>
-    <button class='focusable-ele'>This is button</button>
+    <button class='focusable-ele'>This is common button</button>
     <a href="#">
         <img src="http://image.wdanna.com/avatar/cover.jpg" alt="A car on the road">
     </a>
